CREATE TABLE student (
                         id INTEGER PRIMARY KEY AUTOINCREMENT,
                         first_name TEXT,
                         last_name TEXT,
                         dadname TEXT,
                         telephone TEXT,
                         telegram TEXT,
                         mail TEXT,
                         git TEXT
);